# imageprocessing-module

./: CMakeLists.txt  index.js  package-lock.json  package.json
src/: imageprocessing.cc
